# tech-news-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: checkpoints.db  news_agent.db
data/digests/: 570b63ff_20260602_103957.html  91f7f87c_20260602_104620.html  a1325eed_20260602_104750.html  ba7df014_20260602_114852.html
src/agent/: api.py  delivery.py  formater.py  graph.py  orchestrator.py  reader.py  scraper.py  state.py  validator.py  verifier.py
src/agent/persistence/: checkpointer.py  run_logger.py  subscriber_store.py  url_store.py
src/static/: app.jsx  index.html  styles.css
