[project]
name = "ai-news-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain>=1.3.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "loguru>=0.7.3",
    "lxml>=6.1.1",
    "python-dotenv>=1.2.2",
    "tavily>=1.1.0",
    "uvicorn>=0.49.0",
]
